cmake_minimum_required(VERSION 3.2)
project(algorithm_exercise)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(day1)
add_subdirectory(day2)
add_subdirectory(day3)
add_subdirectory(day0724)
add_subdirectory(day0727)
add_subdirectory(day0731)
add_subdirectory(day0804)
add_subdirectory(day0807)
add_subdirectory(day0817)
add_subdirectory(day0821)
add_subdirectory(day0831)
add_subdirectory(day0904)
add_subdirectory(day0907)
add_subdirectory(day0914)
add_subdirectory(day0919)
add_subdirectory(day0925)
add_subdirectory(day1005)
add_subdirectory(day1010)
add_subdirectory(day1017)